update square cmp from stateservice status

--- a/src/app/game/square/square.component.html
+++ b/src/app/game/square/square.component.html
@@ -1,1 +1,1 @@
-<button (click)="_handleSquareClick()"> - </button>
+<button (click)="_handleSquareClick()"> {{ (_stateService.stateSubject | async).values[row][column] }}</button>
