Change square icon from state

--- a/src/app/game/square/square.component.html
+++ b/src/app/game/square/square.component.html
@@ -1,1 +1,3 @@
-<button (click)="_handleSquareClick()"> {{ (_stateService.stateSubject | async).values[row][column] }}</button>
+<button [class.clickable]="_stateService.state.values[row][column] === '-'" [class.not-clickable]="_stateService.state.values[row][column] !== '-'" (click)="_handleSquareClick()">
+    {{ (_stateService.stateSubject | async).values[row][column] }}
+</button>
