--- a/src/app/game/square/square.component.scss
+++ b/src/app/game/square/square.component.scss
@@ -2,3 +2,11 @@ button {
     height: 120px;
     width: 120px;
 }
+
+.clickable {
+    cursor: pointer;
+}
+
+.not-clickable {
+    cursor: not-allowed;
+}
