--- a/src/app/game/play-counter/play-counter.component.html
+++ b/src/app/game/play-counter/play-counter.component.html
@@ -1,3 +1,3 @@
 <p>
-  Number of Movements: {{ (_stateService.stateSubject | async).plays }}
+  Number of Movements: {{ (_stateService.state$ | async).plays }}
 </p>
