--- a/src/app/game/square/square.component.html
+++ b/src/app/game/square/square.component.html
@@ -1,3 +1,3 @@
 <button [class.clickable]="_stateService.state.values[row][column] === '-'" [class.not-clickable]="_stateService.state.values[row][column] !== '-'" (click)="_handleSquareClick()">
-    {{ (_stateService.stateSubject | async).values[row][column] }}
+    {{ (_stateService.state$ | async).values[row][column] }}
 </button>
