--- a/src/app/game/header/header.component.html
+++ b/src/app/game/header/header.component.html
@@ -1,3 +1,3 @@
 <p>
-  Turn of {{ (_stateService.state$ | async).turn }}
+  Turn of {{ (_stateService.state$ | async).turn.name }} - {{ (_stateService.state$ | async).turn.symbol }}s
 </p>
