--- a/src/app/game/square/square.component.html
+++ b/src/app/game/square/square.component.html
@@ -1,3 +1,7 @@
-<button [class.clickable]="_stateService.state.values[row][column] === '-'" [class.not-clickable]="_stateService.state.values[row][column] !== '-'" (click)="_handleSquareClick()">
+<button [class.clickable]="_stateService.state.values[row][column] === '-'" 
+        [class.not-clickable]="_stateService.state.values[row][column] !== '-'" 
+        (click)="_handleSquareClick()"
+        [disabled]="(_stateService.state$ | async).winner"
+>
     {{ (_stateService.state$ | async).values[row][column] }}
 </button>
