--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,10 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <app-game></app-game>
+  <nav>
+    <a href="" routerLink="/index" routerLinkActive="active">Home</a>
+    <a href="" routerLink="/new" routerLinkActive="active">New Game</a>
+    <a href="" routerLink="/continue" routerLinkActive="active">Continue</a>
+  </nav>
+  <router-outlet></router-outlet>
 </div>
