--- a/src/app/game/game/game.component.html
+++ b/src/app/game/game/game.component.html
@@ -1,9 +1,20 @@
 <div *ngIf="_status == 'fetching'">Loading...</div>
 <div *ngIf="_status == 'success'">
-    <app-header></app-header>
-    <app-board></app-board>
-    <app-play-counter></app-play-counter>
-    <app-reset></app-reset>
+
+    <form>
+        <label>Introduce Player Name</label>
+        <input [(ngModel)]="_player1.name" type="text" />
+        <button (click)="handleSubmitClick()" type="submit">
+            Submit
+        </button>
+    </form>
+
+    <div>
+        <app-header></app-header>
+        <app-board></app-board>
+        <app-play-counter></app-play-counter>
+        <app-reset></app-reset>
+    </div>
 </div>
 <div *ngIf="_status != 'fetching' && _status != 'success'">
     There is a problem communicating with the backend. Error: {{ _status }} 
