--- a/src/app/game/game/game.component.html
+++ b/src/app/game/game/game.component.html
@@ -1,15 +1,15 @@
 <div *ngIf="_status == 'fetching'">Loading...</div>
 <div *ngIf="_status == 'success'">
 
-    <form>
+    <form *ngIf="(_stateService.state$ | async).playerName == ''">
         <label>Introduce Player Name</label>
-        <input [(ngModel)]="_player1.name" type="text" />
-        <button (click)="handleSubmitClick()" type="submit">
+        <input [(ngModel)]="_playerName" name='playerName' type="text" />
+        <button (click)="_handleSubmitClick()" type="submit">
             Submit
         </button>
     </form>
 
-    <div>
+    <div *ngIf="(_stateService.state$ | async).playerName != ''">
         <app-header></app-header>
         <app-board></app-board>
         <app-play-counter></app-play-counter>
