--- a/src/app/game/header/header.component.html
+++ b/src/app/game/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h3>Welcome {{ _stateService._player1.name }}</h3>
+  <h3>Welcome {{ (_stateService.state$ | async).playerName }}</h3>
   <h3>
     <p *ngIf="!(_stateService.state$ | async).winner && 
               (_stateService.state$ | async).plays != 9">
