--- a/src/app/game/game/game.component.html
+++ b/src/app/game/game/game.component.html
@@ -2,8 +2,14 @@
 <div *ngIf="_status == 'success'">
 
     <form *ngIf="(_stateService.state$ | async).playerName == ''">
-        <label>Introduce Player Name</label>
-        <input [(ngModel)]="_playerName" name='playerName' type="text" />
+        <div>
+            <label>Player 1 Name</label>
+            <input [(ngModel)]="_playerName" name='player1' type="text" />
+        </div>
+        <div>
+            <label>Player 2 Name</label>
+            <input [(ngModel)]="_playerName" name='player2' type="text" />
+        </div>
         <button (click)="_handleSubmitClick()" type="submit">
             Submit
         </button>
