Show name of the player for each turn

--- a/src/app/game/header/header.component.html
+++ b/src/app/game/header/header.component.html
@@ -6,7 +6,7 @@
       Turn of {{ (_stateService.state$ | async).turn.name }} - {{ (_stateService.state$ | async).turn.symbol }}s
     </p>
     <p *ngIf="(_stateService.state$ | async).winner">
-      There is a Winner {{ (_stateService.state$ | async).winner.name }} - {{ (_stateService.state$ | async).winner.symbol }}s
+      There is a Winner: {{ (_stateService.state$ | async).winner.name }} - {{ (_stateService.state$ | async).winner.symbol }}s
     </p>
     <p *ngIf="!(_stateService.state$ | async).winner && 
               (_stateService.state$ | async).plays == 9">
