--- a/src/app/game/game/game.component.html
+++ b/src/app/game/game/game.component.html
@@ -19,7 +19,7 @@
         <app-header></app-header>
         <app-board></app-board>
         <app-play-counter></app-play-counter>
-        <app-reset></app-reset>
+        <app-actions></app-actions>
     </div>
 </div>
 <div *ngIf="_status != 'fetching' && _status != 'success'">
