--- a/src/app/game/square/square.component.html
+++ b/src/app/game/square/square.component.html
@@ -1,7 +1,6 @@
-<button [class.clickable]="(_game.onChange$ | async).values[row][column] === '-'" 
-        [class.not-clickable]="(_game.onChange$ | async).values[row][column] !== '-'" 
+<button [class.clickable]="(game.onChange$ | async).values[row][column] === '-'" 
+        [class.not-clickable]="(game.onChange$ | async).values[row][column] !== '-'" 
         (click)="_handleSquareClick()"
-        [disabled]="(_game.onChange$ | async).winner || (_game.onChange$ | async).plays == 9"
->
-    {{ (_game.onChange$ | async).values[row][column] }}
+        [disabled]="(game.onChange$ | async).winner || (game.onChange$ | async).plays == 9">
+    {{ (game.onChange$ | async).values[row][column] }}
 </button>
