--- a/src/app/game/board/board.component.html
+++ b/src/app/game/board/board.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let row of _values; index as i">
-  <app-square *ngFor="let col of row; index as j" [row]="i" [column]="j"></app-square>
+<div *ngFor="let row of game.values; index as i">
+  <app-square *ngFor="let col of row; index as j" [row]="i" [column]="j" [game]="game"></app-square>
 </div>
