Fix. Render current names if new game from existing game

--- a/src/app/game/game/game.component.html
+++ b/src/app/game/game/game.component.html
@@ -22,7 +22,7 @@
         <app-play-counter [game]="game"></app-play-counter>
         
         <div>
-            <button (click)="reset()">New Game</button>
+            <button (click)="reset()">Reset</button>
             <button (click)="save()">Save</button>
         </div>
     </div>
