Enable save button after play

--- a/src/app/game/game/game.component.html
+++ b/src/app/game/game/game.component.html
@@ -23,7 +23,8 @@
         
         <div>
             <button (click)="reset()">Reset</button>
-            <button (click)="save()">Save</button>
+            <button (click)="save()" [disabled]="plays == game.plays"
+            >Save</button>
         </div>
     </div>
 </div>
