--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
     <a href="" routerLink="/index" routerLinkActive="active">Home</a>
     <a href="" routerLink="/new" routerLinkActive="active">New Game</a>
     <a href="" routerLink="/continue" routerLinkActive="active">Continue</a>
+    <a href="" routerLink="/games" routerLinkActive="active">Saved Games</a>
   </nav>
   <router-outlet></router-outlet>
 </div>
