Store a list of games

--- a/src/app/game/list/list.component.html
+++ b/src/app/game/list/list.component.html
@@ -1,7 +1,7 @@
 <ul>
   <li *ngFor="let game of games">
     <span>
-      {{ game.uid }}
+      {{ game.uri }}
       <button>Continue</button>
       <button>Delete</button>
     </span>
