--- a/src/app/game/square/square.component.scss
+++ b/src/app/game/square/square.component.scss
@@ -1,12 +1,20 @@
 button {
-    height: 120px;
-    width: 120px;
+  width: 100px;
+  height: 100px;
+  background-color: #78bec5;
+  border-radius: 14px;
+  color: #fff;
+  height: 90px;
+  margin: 5px;
+  font-size: 50px;  
+  outline:none;
 }
+
 
 .clickable {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.not-clickable {
-    cursor: not-allowed;
+.no-clickable {
+  cursor: not-allowed;
 }
