--- a/src/app/game/game/game.component.scss
+++ b/src/app/game/game/game.component.scss
@@ -2,25 +2,6 @@ form {
   margin-top: 50px;
 }
 
-form input[type=submit] {
-  background: #0168b3;
-  color: white;
-  border-style: outset;
-  border-color: #0168b3;
-  height: 30px;
-  width: 80px;
-  margin-left: 10px;
-  font: bold 15px arial, sans-serif;
-  text-shadow:none;
-  cursor: pointer;
-}
-
-form input[type=submit]:hover {
-  background-color: #07c;
-  border-color: #005999;
-  box-shadow: inset 0 1px 0 #3af;
-}
-
 form input[type=text] {
   padding: 8px;
   font-size: 24px;
@@ -43,4 +24,8 @@ form label {
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
+}
+
+button {
+  margin: 1em;
 }
