--- a/src/app/game/list/list.component.html
+++ b/src/app/game/list/list.component.html
@@ -1,9 +1,11 @@
-<ul>
-  <li *ngFor="let game of games">
-    <span>
+<div>
+  <ul class="list-group">
+    <li class="list-group-item" *ngFor="let game of games">
       {{ game.id }}
-      <button [routerLink]="['/continue', game.id]">Continue</button>
-      <button>Delete</button>
-    </span>
-  </li>
-</ul>
+      <span>
+        <button class="btn btn-primary btn-sm" [routerLink]="['/continue', game.id]">Continue</button>
+        <button class="btn btn-danger btn-sm">Delete</button>
+      </span>
+    </li>
+  </ul>  
+</div>
