--- a/src/app/game/game/game.component.html
+++ b/src/app/game/game/game.component.html
@@ -23,9 +23,32 @@
         
         <div>
             <button class="btn btn-secondary" (click)="reset()">Reset</button>
-            <button class="btn btn-primary" (click)="save()" 
+            <button class="btn btn-primary" 
+                    data-toggle="modal" data-target="#gameNameModal"
                     [disabled]="plays == game.plays">Save
             </button>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="gameNameModal" tabindex="-1" role="dialog" aria-labelledby="gameNameModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="gameNameModalLabel">Introduce a name for this game</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="gameNameInput" data-focus="">
+                        </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
