--- a/src/app/game/game/game.component.html
+++ b/src/app/game/game/game.component.html
@@ -29,9 +29,12 @@
     </div>
     <div *ngIf="showNameInput" class="col-8 offset-2 col-sm-6 offset-sm-3 col-lg-4 offset-lg-4" >
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Game's name" aria-label="Game's name" aria-describedby="confirmBtn">
+        <input type="text" #name value="{{ game.name }}" class="form-control" placeholder="Game's name" aria-label="Game's name" aria-describedby="confirmBtn">
         <div class="input-group-append">
-          <button class="btn btn-primary" type="button" id="confirmBtn">Confirm</button>
+          <button class="btn btn-primary" type="button"
+                  id="confirmBtn" (click)="save(name.value)" >
+            Confirm
+          </button>
         </div>
       </div>
     </div>
