--- a/src/app/game/game/game.component.html
+++ b/src/app/game/game/game.component.html
@@ -29,9 +29,10 @@
     </div>
     <div *ngIf="showNameInput" class="col-8 offset-2 col-sm-6 offset-sm-3 col-lg-4 offset-lg-4" >
       <div class="input-group mb-3">
-        <input type="text" #name value="{{ game.name }}" class="form-control" placeholder="Game's name" aria-label="Game's name" aria-describedby="confirmBtn">
+        <input type="text" #name value="{{ game.name }}" (keyup)="0" class="form-control" placeholder="Game's name" aria-label="Game's name" aria-describedby="confirmBtn">
         <div class="input-group-append" id="confirmBtn">
-          <button class="btn btn-primary " type="button" (click)="save(name.value)" >
+          <button class="btn btn-primary " type="button" 
+                  (click)="save(name.value)" [disabled]="name.value == ''">
             Confirm
           </button>
           <button class="btn btn-outline-secondary" type="button" (click)="toggleSaveButton()">Discard</button>
