Delete a game from list

--- a/src/app/game/list/list.component.html
+++ b/src/app/game/list/list.component.html
@@ -4,7 +4,7 @@
       {{ game.name }}
       <span>
         <button class="btn btn-primary btn-sm" [routerLink]="['/continue', game.id]">Continue</button>
-        <button class="btn btn-danger btn-sm">Delete</button>
+        <button class="btn btn-danger btn-sm" (click)="removeGame(game)">Delete</button>
       </span>
     </li>
   </ul>  
